2019-10-17  Frederik Seiffert <frederik@algoriddim.com>

	* Tests/base/NSHashTable/weakObjects.m:
	* Tests/base/NSMapTable/weakObjects.m:
	Added tests for [NSHashTable weakObjectsHashTable] and
	[NSMapTable strongToWeakObjectsMapTable].

2019-11-26  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRunLoop.m:
	* Tests/base/NSRunLoop/dispatch.m:
	Fix runloop integration for libdispatch from swift-corelibs
	* .travis.yml:
	* travis-deps.yml:
	Fix CI related to libdispatch.

2019-11-15  Frederik Seiffert <frederik@algoriddim.com>

	* configure.ac: check for unwind.h
	* configure: regenerate
	* Source/NSException.m: Added support for backtrace symbolication
	using libunwind, which will be used when backtrace() is unavailable.

2019-11-14  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSXPCConnection.h,
	* Source/NSXPCConnection.m: Fix broken compilation on gcc.

2019-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: updated to latest info

2019-11-05  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSProcessInfo.h:
	* Source/NSPathUtilities.m:
	* Source/NSProcessInfo.m:
	Added support for NSTemporaryDirectory() on Android using subfolder
	in folder returned by Context.getCacheDir(), as there is no official
	temp dir prior to API level 26. Clean up temp dir on launch in
	GSInitializeProcessAndroid(). Also use Context.getCacheDir()
	as NSCachesDirectory (with NSUserDomainMask) on Android.

2019-10-27  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSUnit.h,
	* Headers/Foundation/NSMeasurement.h,
	* Headers/Foundation/NSMeasurementFormatter.h,
	* Headers/Foundation/NSEnergyFormatter.h,
	* Headers/Foundation/NSLengthFormatter.h,
	* Headers/Foundation/NSMassFormatter.h,
	* Source/NSUnit.m,
	* Source/NSMeasurement.m,
	* Source/NSMeasurementFormatter.m,
	* Source/NSEnergyFormatter.m,
	* Source/NSLengthFormatter.m,
	* Source/NSMassFormatter.m,
	* Source/NSUnit.m: More cleanup on the measurement code.
