@@ -627,13 +627,7 @@ NSNextHashEnumeratorItem(NSHashEnumerator *enumerator)
 	}
       else
 	{
-	  NSConcreteHashTable *map = enumerator->map;
-	  GSIMapKey k = GSI_MAP_READ_KEY(map, &n->key);
-	  if (k.ptr == NULL)
-	    {
-		return NSNextHashEnumeratorItem(enumerator);
-	    }
-	  return k.ptr;
+	  return n->key.ptr;
 	}
     }
   else if (enumerator->node != 0)	// Got an enumerator object
